platform/exports/awx/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"traefik.ingress.kubernetes.io/router.entrypoints":"websecure","traefik.ingress.kubernetes.io/router.tls":"true","traefik.ingress.kubernetes.io/router.tls.certresolver":"le"},"labels":{"app.kubernetes.io/component":"awx","app.kubernetes.io/managed-by":"awx-operator","app.kubernetes.io/operator-version":"2.19.1","app.kubernetes.io/part-of":"awx-kwiki"},"name":" [...]
      traefik.ingress.kubernetes.io/router.entrypoints: websecure
      traefik.ingress.kubernetes.io/router.tls: "true"
      traefik.ingress.kubernetes.io/router.tls.certresolver: le
    creationTimestamp: "2025-11-19T16:23:34Z"
    generation: 1
    labels:
      app.kubernetes.io/component: awx
      app.kubernetes.io/managed-by: awx-operator
      app.kubernetes.io/operator-version: 2.19.1
      app.kubernetes.io/part-of: awx-kwiki
    name: awx-kwiki-ingress
    namespace: awx
    ownerReferences:
    - apiVersion: awx.ansible.com/v1beta1
      kind: AWX
      name: awx-kwiki
      uid: 0c76c8fc-9e96-4ff7-8b6c-9aac9fabce91
    resourceVersion: "6149270"
    uid: ea33b600-f808-4261-a7a2-00a8b7d2a40c
  spec:
    ingressClassName: traefik
    rules:
    - host: awx.kwiki.it.com
      http:
        paths:
        - backend:
            service:
              name: awx-kwiki-service
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 69.30.233.178
kind: List
metadata:
  resourceVersion: ""
